feat(back): a whole new world...
GameSync 파이프라인 전체 Mono/Flux로 변경
GameSync 배치 처리방식 jdbcTemplate으로 변경
Opening 비엔티티화
GameOpening 엔티티 삭제
UseCase기반의 클린 아키텍쳐로 변경
Web을 좀 더 RESTful스럽게 변경
Rate Limit 문제 해결을 위해 플랫폼마다 API큐 추가
세션방식으로 변경 (API 때문에 스케일 아웃 어차피 못함)
I/O작업에 사용할 스레드 virtualThread로 변경
DB 볼륨확보를 위한 고아 플레이어/게임 삭제(배치)
Default ID strategy를 Sequence로 변경
RawGame Dto 수정
db migration을 위해 flyway 종속 추가
gc, hikariCP, traffic 모니터링을 위해 prometheus 종속 추가